Add `ConfigurationNode.list(java.util.List)` factory